# lazydb

./: CHANGELOG.md  CONTEXT.md  CONTEXT2.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  test_rusqlite.rs
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md
src/: app.rs  config.rs  keys.rs  main.rs  query.rs  sqlite.rs  storage.rs  ui.rs
